force-app/main/default/objects/FEC_Task_Automation_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>ADO#220369
The fields of this custom settings are use in the FEC Task Automation Process Builder.</description>
    <fields>
        <fullName>Call_2_Delay_Days__c</fullName>
        <description>ADO#220369
This field is used in the FEC Task Automation Process Builder to add a delay to the due date of a follow up task (outbound call)</description>
        <label>Call 2 - Delay Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_3_Delay_Days__c</fullName>
        <description>ADO#220369
This field is used in the FEC Task Automation Process Builder to add a delay to the due date of a follow up task (outbound call)</description>
        <label>Call 3 - Delay Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_4_Delay_Days__c</fullName>
        <description>ADO#220369
This field is used in the FEC Task Automation Process Builder to add a delay to the due date of a follow up task (outbound call)</description>
        <label>Call 4 - Delay Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Attempt_Number__c</fullName>
        <description>ADO#220369
This field is used in the FEC Task Automation Process Builder to set the maximum number of follow up tasks to be created (outbound call)</description>
        <inlineHelpText>The value of this field should never be set to 0.
It should be set to &quot;1&quot; to turn off automatic follow up task creation</inlineHelpText>
        <label>Max Attempt Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FEC Task Automation Settings</label>
</CustomObject>